src/tests/evaluation_error/type_mismatch_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_integer_infix_expression__test_type_mismatch_integer_infix_expression_case_7_lexical_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_integer_infix_expression/mod.rs
assertion_line: 38
expression: tokens
---
[
    PositionedToken {
        token: False,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Multiply,
        position: Position {
            line: 1,
            column: 7,
        },
    },
    PositionedToken {
        token: String {
            literal: "can't multiply",
        },
        position: Position {
            line: 1,
            column: 9,
        },
    },
]
